Revision 5.2
- Added the test data for the database, and changed around some of the
class processes.

- Still some minor tweaking that could be done with the output, however
the program is in a fairly functional state at the moment.